--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Testing</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -10,9 +10,9 @@
 
 <div class="contact visible-lg">
 	<ul class="icon">
-		<li><a href="#" class="fbHover"><img src="images/icons/fb.png" class="fb"></a></li>
-		<li><a href="#" class="inHover"><img src="images/icons/in.png" class="in"></a></li>
-		<li><a href="#" class="mailHover"><img src="images/icons/mail.png" class="mail"></a></li>
+		<li><a href="#" class="fbIcon"><img src="images/icons/fb.png" class="fb"></a></li>
+		<li><a href="#" class="inIcon"><img src="images/icons/in.png" class="in"></a></li>
+		<li><a href="#" class="mailIcon"><img src="images/icons/mail.png" class="mail"></a></li>
 	</ul>
 </div>
 
