--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="container margin-top75">
 
-	<!--NAVIGATION-->	
+	<!--Navigation-->	
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	  <div class="container-fluid">
 	  
@@ -41,12 +41,13 @@
 		
 	  </div>
 	</nav>
-	<!--END NAVIGATION-->
+	<!--END Navigation-->
 
 	<a name="top"></a>
 	<div class="jumbotron">
 		<h1>Welcome!</h1>
 		
+			<!--Text Filler-->
 			<p>Lorem ipsum dolor sit amet, illum oblique duo ex, ut vis vide wisi impedit,
 			offendit adipisci vis no. Vix brute legere ponderum ad. Nostrum fastidii offendit
 			id eam, phaedrum oportere similique te mea. Eros meliore atomorum vix te, 
@@ -58,10 +59,10 @@
 			Quem etiam sea in. Elitr voluptua reprehendunt vel an, vidit viris tation ea vel. Cu
 			agam appetere voluptatibus usu, te facer scaevola explicari eum.</p>
 			
-	
 	</div>
 
 	<div>
+		<!--Photo Thumbnails-->
 		<a name="photography"></a>
 		<a href="blog/flower.html"><img src="images/thumbnails/flowerThumb.png" class="col-xs-6 col-sm-6 col-md-3 col-lg-3 imgRound grayscale"></a>
 		<a href="blog/sunriseTree.html"><img src="images/thumbnails/sunriseTreeThumb.png" class="col-xs-6 col-sm-6 col-md-3 col-lg-3 imgRound grayscale"></a>
