--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <div class="contact visible-lg">
 	<ul class="icon">
-		<li><a href="#" class="fbIcon"><img src="images/icons/fb.png" class="fb"></a></li>
-		<li><a href="#" class="inIcon"><img src="images/icons/in.png" class="in"></a></li>
-		<li><a href="#" class="mailIcon"><img src="images/icons/mail.png" class="mail"></a></li>
+		<li><a href="https://www.facebook.com/philippe.roemer" target="_blank" class="fbIcon"><img src="images/icons/fb.png" class="fb"></a></li>
+		<li><a href="http://www.linkedin.com/pub/philippe-roemer/8a/391/23b" target="_blank" class="inIcon"><img src="images/icons/in.png" class="in"></a></li>
+		<li><a href="mailto:philipperoemer@yahoo.com" target="_blank" class="mailIcon"><img src="images/icons/mail.png" class="mail"></a></li>
 	</ul>
 </div>
 
